--- a/start-page.css
+++ b/start-page.css
@@ -26,7 +26,9 @@
 }
 
 
-
+.pizarra{
+  width:100%;
+}
 
 .pizarra img{
   position: absolute;
@@ -46,6 +48,15 @@
   font-size: 80px;
 }
 
+.pizarra ul{
+  width: 60%;
+  color: white;
+  font-size: 29px;
+  position: absolute;
+  margin-top: 487px;
+  margin-left: 169px;
+}
+
 .game-page{
   position: relative;
   background-image: url("images/chicote-cuchillo.jpg");
@@ -54,7 +65,6 @@
   width: 100vw;
   height: 100vh;
 }
-
 
 .pizza-start{
   position: absolute;
@@ -82,4 +92,52 @@
 
 .cinta{
   display:none;
+}
+
+#outer-dropzone {
+  height: 140px;
+}
+
+#inner-dropzone {
+  height: 80px;
+}
+
+.dropzone {
+  background-color: #ccc;
+  border: dashed 4px transparent;
+  border-radius: 4px;
+  margin: 10px auto 30px;
+  padding: 10px;
+  width: 80%;
+  transition: background-color 0.3s;
+}
+
+.drop-active {
+  border-color: #aaa;
+}
+
+.drop-target {
+  background-color: #29e;
+  border-color: #fff;
+  border-style: solid;
+}
+
+.drag-drop {
+  display: inline-block;
+  min-width: 40px;
+  padding: 2em 0.5em;
+
+  color: #fff;
+  background-color: #29e;
+  border: solid 2px #fff;
+
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+
+  transition: background-color 0.3s;
+}
+
+.drag-drop.can-drop {
+  color: #000;
+  background-color: #4e4;
 }
