--- a/style/start-page.css
+++ b/style/start-page.css
@@ -1,45 +1,49 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-.title{
+.title {
   position: absolute;
   text-align: center;
-  color:white;
+  color: white;
   margin-top: 2%;
   margin-left: 40%;
 }
 
-#all-in,#pepperoni,#veggie,#tuna,#diabola{
-  position: absolute; 
+#all-in,
+#pepperoni,
+#veggie,
+#tuna,
+#diabola {
+  position: absolute;
   width: 17%;
   height: 1%;
   visibility: hidden;
-  
 }
 
-#all-in img,#pepperoni img,#veggie img,#tuna img,#diabola img{
+#all-in img,
+#pepperoni img,
+#veggie img,
+#tuna img,
+#diabola img {
   width: 10px;
   height: 10px;
 }
 
-
-.pizarra{
-  width:100%;
+.pizarra {
+  width: 100%;
 }
 
-.pizarra img{
+.pizarra img {
   position: absolute;
-    width: 445px;
-    height: 582px;
-    margin-top: 10%;
-    margin-left: 7%;
-
+  width: 445px;
+  height: 582px;
+  margin-top: 10%;
+  margin-left: 7%;
 }
 
-.pizarra p{
+.pizarra p {
   position: absolute;
   text-align: center;
   color: white;
@@ -48,7 +52,7 @@
   font-size: 80px;
 }
 
-.pizarra ul{
+.pizarra ul {
   width: 60%;
   color: white;
   font-size: 29px;
@@ -57,20 +61,20 @@
   margin-left: 169px;
 }
 
-.pizarra li{
+.pizarra li {
   padding-bottom: 44px;
 }
 
-.game-page{
+.game-page {
   position: relative;
   background-image: url("../images/chicote-cuchillo.jpg");
-  background-repeat:no-repeat; 
+  background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
   height: 100vh;
 }
 
-.pizza-start{
+.pizza-start {
   position: absolute;
   width: 300px;
   margin-top: 43%;
@@ -82,20 +86,28 @@
   cursor: move;
 }
 
-@keyframes pizza-start{
-  100% {margin-top: 41%}
+@keyframes pizza-start {
+  100% {
+    margin-top: 41%;
+  }
 }
 
-.cocinero{
+.cocinero {
   display: none;
 }
 
-.caja-pizza{
+.caja-pizza {
   visibility: hidden;
 }
 
-.cinta{
-  display:none;
+.cinta {
+  display: none;
+}
+
+.guy img {
+  visibility: hidden;
+  width: 10px;
+  height: 10px;
 }
 
 #outer-dropzone {
@@ -136,7 +148,7 @@
   border: solid 2px #fff;
 
   -webkit-transform: translate(0px, 0px);
-          transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
 
   transition: background-color 0.3s;
 }
