--- a/style/pizza.css
+++ b/style/pizza.css
@@ -3,7 +3,7 @@ h3 {
   margin-top: 10px;
 }
 
-#tocino {
+#carne {
   visibility: hidden;
   position: absolute;
   text-align: center;
@@ -13,14 +13,14 @@ h3 {
   width: 320px;
 }
 
-#tocino img {
+#carne img {
   display: inline-block;
   width: 55px;
   height: 50px;
   padding-top: 20px;
 }
 
-#pepperoni {
+#picante {
   visibility: hidden;
   position: absolute;
   text-align: center;
@@ -29,14 +29,14 @@ h3 {
   font-size: 30px;
 }
 
-#pepperoni img {
+#picante img {
   display: inline-block;
   width: 50px;
   height: 50px;
   padding-top: 20px;
 }
 
-#seta {
+#boletus {
   visibility: hidden;
   position: absolute;
   text-align: center;
@@ -45,14 +45,14 @@ h3 {
   font-size: 30px;
 }
 
-#seta img {
+#boletus img {
   display: inline-block;
   width: 45px;
   height: 50px;
   padding-top: 20px;
 }
 
-#pescado {
+#tuna {
   visibility: hidden;
   position: absolute;
   text-align: center;
@@ -61,14 +61,14 @@ h3 {
   font-size: 30px;
 }
 
-#pescado img {
+#tuna img {
   display: inline-block;
   width: 50px;
   height: 50px;
   padding-top: 20px;
 }
 
-#queso {
+#diabola {
   visibility: hidden;
   position: absolute;
   text-align: center;
@@ -77,7 +77,7 @@ h3 {
   font-size: 30px;
 }
 
-#queso img {
+#diabola img {
   display: inline-block;
   width: 50px;
   height: 50px;
