--- a/style/start-page.css
+++ b/style/start-page.css
@@ -55,7 +55,7 @@
 
 .game-page {
   position: relative;
-  background-image: url("../images/chicote-cuchillo.jpg");
+  background-image: url("../images/chicote-giorgio.png");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
